--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ body {
     margin: 150px auto;
     position: relative;
 }
+@media (max-width: 500px) {
+    .card {
+        width: 350px;
+    }
+}
 
 .pause {
     margin-bottom: 68px;
